Fixed font and stuff

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>The Cube</title>
-  <link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/KWVtcbF/Rubik.png"/>
+  <title>Cube</title>
+  <link rel="shortcut icon" type="image/jpg" href="resources/Rubik.png"/>
 
   <meta name="viewport" content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0"><link rel="stylesheet" href="./style.css">
 
@@ -18,8 +18,8 @@
 
   <div class="ui__texts">
     <h1 class="text text--title">
-      <span>THE</span>
-      <span>CUBE</span>
+      <span></span>
+      <span>CUBED</span>
     </h1>
     <div class="text text--note">
       Double tap to start
