--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Cube</title>
+  <title>Cubde</title>
   <link rel="shortcut icon" type="image/jpg" href="resources/Rubik.png"/>
 
   <meta name="viewport" content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0"><link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
 
